# micstate

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.md  README.md  makefile
lib/: UniversalSpeechStatic.lib
src/: app.cpp  app.h  app.hpp  main.cpp  mic_monitor.cpp  mic_monitor.h  mic_monitor.hpp  miniaudio.cpp  tray_icon.cpp  tray_icon.h  tray_icon.hpp
vcpkg/: vcpkg.json
vcpkg/ports/universalspeech/: universalspeech-config.cmake.in
